--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ services:
 
 script:
   - make image
+  # We set these via the Travis CI website.
+  - echo "$DOCKER_PASSWORD" | docker login --username="$DOCKER_USERNAME" --password-stdin
+  - make push
